fix(button): fix button group align problem

--- a/packages/web-vue/components/button/style/index.less
+++ b/packages/web-vue/components/button/style/index.less
@@ -233,7 +233,8 @@
 
 // 按钮组样式
 .@{btn-prefix-cls}-group {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
 
   .@{btn-prefix-cls}-outline:not(:first-child),
   .@{btn-prefix-cls}-dashed:not(:first-child) {
